# scully

./: .bazelrc  .cz-config.js  .czrc  .editorconfig  .eslintrc  .gitattributes  .gitignore  .gitignore copy  .huskyrc  .prettierignore  .prettierrc  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  angular-playground.json  angular.json  autoVersion.js  autoVersion.ts  browserslist  bs.sh  changelog.md  cleanCSStest.ts  client_id  coulson-publish.sh  cypress.json  depedencyHash.cjs  firebase.json  gp.ts  jest.config.js  jest.config.mjs  jest.config.ts  jest.preset.js  jest.preset.mjs  migrations.failed..json  migrations.json  nodemon.json  nx.json  (+33 more)
.firebase/: hosting.ZGlzdFxzdGF0aWNcZG9jLXNpdGVz.cache
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  workflonpmpublish.yml
.husky/: commit-msg
Documentation/: demosteps.md  genration steps.md  gettingStarted.md  pupeteer_vs_universal.md  schematics.md
blog/: blah.md  jorge.md  page-1.md  page-2.md  page-3.md  page-4.adoc
certs/: localhost.cert
docs/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_es.md  CONTRIBUTING.md  blog.md  blog_es.md  consutancy.md  faq.md  faq_es.md  features.md  features_es.md  genration steps.md  getting-started.md  getting-started_es.md  gettingStarted.md  issues.md  learn.md  overview.md  overview_es.md  plugins.md  plugins_es.md  polyfills.md  pre-requisites.md  pre-requisites_es.md  recommended-plugins.md  recommended-plugins_es.md  release-for-v8.md  roadmap.md  routeParameters.md  scully-cmd-line.md  scully-configuration.md  scully-lib-core.md  scully-provided-plugins.md  scully.md  scully_es.md  showcase.md  util.md  utils.md  working-with-plugins.md
docs_extraPages/: pricing.md  support.md
documentation/: demosteps.md
extraPlugin/: docs-link-update.js  extra-plugin.js  newSample.js  tocPlugin.js  voidPlugin.js
scully/: .gitignore  BUILD.bazel  baseconfig.ts  index.d.ts  index.ts  loadRenderer.ts  package-lock.json  package.json  readme.md  scully.sample-blog.config.ts  scully.ts  scullyio-scully-0.0.45.tgz  startBackgroundServer.ts  tsconfig.json  tsconfig.sample-blog.json  tsconfig.scully-docs.json  tsconfig.scully.json  tsconfig.sps-sample.json  tsconfig.universal-sample.json  tsconfig.universal.sample.json  watchMode.ts
scully/fileHanderPlugins/: asciidoc.ts  markdown.ts
scully/pluginManagement/: index.ts  pluginConfig.ts  pluginRepository.ts  pluginWrap.ts  systemPlugins.ts
scully/plugins/: error.ts  render-once.ts  sampleFromTS.ts  testPWrenderer.ts  testRender.ts
scully/renderPlugins/: contentRenderPlugin.ts  customMarkdownOptions.ts  executePlugins.ts  index.ts  launchedBrowser.ts  manualIdle.ts  puppeteerRenderPlugin.js  puppeteerRenderPlugin.ts  routeContentRenderer.ts  seoHrefCompletionPlugin.ts
scully/renderPlugins/content-render-utils/: getScript.ts  handleFile.ts  insertContent.ts  readFileAndCheckPrePublishSlug.ts
scully/routerPlugins/: addOptionalRoutesPlugin.ts  contentFolderPlugin.ts  index.ts  jsonRoutePlugin.ts  renderTemplate.ts  traverseAppRoutesPlugin.ts
scully/runtime/: app-routing.module.mjs  app.component.mjs  app.module.mjs  app.sps.module.mjs
scully/runtime/about/: about-routing.module.mjs  about.component.mjs  about.module.mjs
scully/runtime/basehref/: basehref.module.mjs
scully/runtime/blog/: blog-holder.component.mjs  blog-routing.module.mjs  blog.component.mjs  blog.module.mjs
scully/runtime/blog/blog-list/: blog-list.component.mjs
scully/runtime/content/: content.component.mjs  content.module.mjs
scully/runtime/demo/: demo-routing.module.mjs  demo.component.mjs  demo.module.mjs
scully/runtime/exclude/: exclude-routing.module.mjs  exclude.component.mjs  exclude.module.mjs
scully/runtime/manual-idle/: manual-idle-routing.module.mjs  manual-idle.component.mjs  manual-idle.module.mjs
scully/runtime/noscript/: noscript.module.mjs
scully/runtime/pagenotfound/: pagenotfound-routing.module.mjs  pagenotfound.component.mjs  pagenotfound.module.mjs
scully/runtime/slow/: slow-routing.module.mjs  slow.component.mjs  slow.module.mjs
scully/runtime/static/: static-routing.module.mjs  static.component.mjs  static.module.mjs
scully/runtime/user/: user-routing.module.mjs  user.component.mjs  user.module.mjs
scully/runtime/user/post/: post.component.mjs
scully/runtime/user/posts/: posts.component.mjs
scully/runtime/user/users/: users.component.mjs
scully/systemPlugins/: storeRoutes.ts  writeToFs.plugin.ts
scully/testData/: users-testdata.ts
scully/universal/: scully-universal-worker.ts  scully-universal.ts  tasks.ts
scully/utils/: addSSL.ts  cache.ts  chunk.ts  cli-options.ts  compileConfig.ts  config.ts  createFolderFor.ts  dataServer.ts  deepGet.ts  defaultAction.ts  findAngularJsonPath.ts  fsAngular.ts  fsFolder.ts  httpGetJson.ts  index.ts  interfacesandenums.ts  isPortTaken.ts  log.ts  nodeFsFolder.ts  proxyAdd.ts  randomString.ts  read-anguar-json.ts  replaceFirstRouteParamWithVal.ts  restart.ts  startup.ts  staticServer.ts  validateConfig.ts  waitForServerToBeAvailable.ts
scully/utils/handlers/: handleAllDone.ts  handleRouteDiscoveryDone.ts  renderParallel.ts  routeDiscovery.ts
scully/utils/serverstuff/: addSSL.ts  dataServer.ts  proxyAdd.ts  staticServer.ts  waitForServerToBeAvailable.ts
scully/utils/services/: index.ts  routeStorage.ts
src/: setup-jest.ts  (+1 more)
tools/: buildIt.js  (+24 more)
(+1581 files in other folders)
